Add return links and resize images with inline css

--- a/recipes/sarma.html
+++ b/recipes/sarma.html
@@ -16,7 +16,7 @@
         <p>They are a staple of Turkish cuisine and are immensely popular all over the Balkans, Middle East, Central, and Eastern Europe. Basically, regions that were once occupied by the Ottoman Empire.</p>
 
         <h3>Ingredients:</h3>
-        
+
         <ul>
             <li>Vine leaves</li>
             <li>Rice</li>
@@ -33,5 +33,9 @@
             <li>Boil some water in the kettle and pour it over the rolls to barely cover them. Cover the pot, bring to a boil, and simmer on low heat for 30-40 minutes. Check after 30 minutes, if the rice is not perfectly soft yet, give a bit more time. Carefully remove the cooked rolls from the pot and keep them warm in a larger, deeper serving dish. You will need their cooking liquid to make the sauce.</li>
             <li>Melt the butter in a small saucepan. Sprinkle the flour and stir well for 1-2 minutes. Add tomato paste and stir well again. Slowly start adding the cooking liquid while whisking continuously. Add a little chicken stock or vegetable broth if you feel that you don’t have enough cooking liquid. Simmer for 1-2 minutes stirring continuously. If the sauce is too thick, add a little more broth or stock. Adjust the taste with lemon juice, salt, and pepper. Pour the sauce over the stuffed vine leaves and serve immediately.</li>
         </ol>
+        <ul>
+            <li><a href="#header">Return to top</a></li>
+            <li><a href="../index.html">Return to recipes</a></li>
+        </ul>
     </body>
 </html>
