--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -5,8 +5,8 @@
         <title>Salmon recipe</title>
     </head>
     <body>
-        <h1>Crispy-Skinned Orange Honey Salmon</h1>
-        <img src="salmon.jpg" alt="A picture depicting a pair of nicely cooked salmons">
+        <h1 id="header">Crispy-Skinned Orange Honey Salmon</h1>
+        <img src="salmon.jpg" alt="A picture depicting a pair of nicely cooked salmons" style="width: 900px;height: 625px;">
         <p>Fresh, Asian-inspired salmon fillets with a crispy skin and an orange, ginger, and honey glaze. Unlike most similar recipes, this one is made without soy sauce and with totally fresh ingredients. The result is a bright, fresh fish with great taste and texture. The fresh ingredients are the star here: Don't substitute with dried, powdered, or frozen ingredients! I served on top of rice and steamed broccoli garnished with green onions. </p>
         <ul>
             <li>½ cup freshly squeezed orange juice.</li>
@@ -28,5 +28,9 @@
             <li>Carefully remove skillet from oven when it just barely starts to smoke. Add vegetable oil and place salmon fillets, skin-side down, in the skillet.</li>
             <li>Bake in the hot oven until fish flakes easily with a fork, or to your desired doneness, 5 to 9 minutes. Serve immediately.</li>
         </ol>
+        <ul>
+            <li><a href="#header">Return to top</a></li>
+            <li><a href="../index.html">Return to recipes</a></li>
+        </ul>
     </body>
 </html>
