--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Butternut Squash Soup</h1>
-        <img src="soup.jpg" alt="A picture of a bone yellow soup. Delicious">
+        <img src="soup.jpg" alt="A picture of a bone yellow soup. Delicious" style="width: 740px;height: 625px;">
         <p>Delicious and very easy to make. You can use 3 to 4 cups of chicken broth instead of the water and bouillon cubes. Also works well with half as much cream cheese if you don't want it too rich.</p>
         <ul>
             <li>6 tablespoons chopped onion.</li>
@@ -26,5 +26,9 @@
             <li>In a large saucepan, saute onions in margarine until tender. Add squash, water, bouillon, marjoram, black pepper and cayenne pepper. Bring to boil; cook 20 minutes, or until squash is tender.</li>
             <li>Puree squash and cream cheese in a blender or food processor in batches until smooth. Return to saucepan, and heat through. Do not allow to boil.</li>
         </ol>
+        <ul>
+            <li><a href="#header">Return to top</a></li>
+            <li><a href="../index.html">Return to recipes</a></li>
+        </ul>
     </body>
 </html>
