--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Salmon recipe</title>
     </head>
     <body>
         <h1 id="header">Crispy-Skinned Orange Honey Salmon</h1>
-        <img src="salmon.jpg" alt="A picture depicting a pair of nicely cooked salmons" style="width: 900px;height: 625px;"> 
+        <img src="salmon.jpg" alt="A delicious pair of salmons." style="width: 880px;height: 625px;">
         <p>Fresh, Asian-inspired salmon fillets with a crispy skin and an orange, ginger, and honey glaze. Unlike most similar recipes, this one is made without soy sauce and with totally fresh ingredients. The result is a bright, fresh fish with great taste and texture. The fresh ingredients are the star here: Don't substitute with dried, powdered, or frozen ingredients! I served on top of rice and steamed broccoli garnished with green onions. </p>
         <ul>
             <li>½ cup freshly squeezed orange juice.</li>
