Include inline css for raw.jpg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="recipes/raw.jpg" alt="Where is the lamb sauce??">
+        <img src="recipes/raw.jpg" alt="Where is the lamb sauce??" style="width: 900px;height: 525px;">
         <ul>
             <li><a href="recipes/sarma.html">Turkish Sarma</a></li>
             <li><a href="recipes/salmon.html">Crispy-Skinned Orange Honey Salmon</a></li>
