Fixed return to top link not working

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -7,7 +7,7 @@
         <title>Butternut Squash Soup</title>
     </head>
     <body>
-        <h1>Butternut Squash Soup</h1>
+        <h1 id="header">Butternut Squash Soup</h1>
         <img src="soup.jpg" alt="A picture of a bone yellow soup. Delicious" style="width: 740px;height: 625px;">
         <p>Delicious and very easy to make. You can use 3 to 4 cups of chicken broth instead of the water and bouillon cubes. Also works well with half as much cream cheese if you don't want it too rich.</p>
         <ul>
