Fixed return to top link not working

--- a/recipes/sarma.html
+++ b/recipes/sarma.html
@@ -5,7 +5,7 @@
         <title>Sarma recipe</title>
     </head>
     <body>
-        <h1>Sarma</h1>
+        <h1 id="header">Sarma</h1>
         <img src="sarma.jpg" alt="Image of a delicious looking sarma">
         <h2>What is sarma and how to make it?</h2>
 
